<resources>
    <string name="app_name">Restaurant</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="telephone">Telephone</string>
    <string name="button_signup">S\'inscrire</string>
    <string name="button_signin">Se connecter</string>
    <string name="text_when_registered">Vous avez deja un compte? Se connecter</string>
    <string name="text_when_not_registered">Vous n\'avez pas un compte? S\'inscrire</string>
    <string name="thumbnail">thumbnail</string>
    <string name="pref_file">userData</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categorie">Categorie</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_food">Liste menu</string>
    <string name="menu_list">Liste des Menus</string>
    <string name="plus_populaire">Les plus populaires</string>
    <string name="communicate">Communicate</string>
    <string name="image_desc">image of the categorie</string>
    <string name="name_of_food">Name of food</string>
</resources>
